--- a/DbDocumentMaker/DbDocumentMaker.csproj
+++ b/DbDocumentMaker/DbDocumentMaker.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\Common.cs" />
     <Compile Include="Utility\Config.cs" />
+    <Compile Include="Utility\Export.cs" />
     <Compile Include="Utility\MsgBoxHelper.cs" />
     <Compile Include="Utility\NpoiHelper.cs" />
     <EmbeddedResource Include="FrmMain.resx">
